--- a/wercker.yml
+++ b/wercker.yml
@@ -11,4 +11,7 @@ build:
         # use `npm install --save bower` to add it.
         name: bower install
         code: node_modules/bower/bin/bower install
- 
+ 	
+ 	# this assumes that your test suite runs via `grunt test`
+ 	- grunt:
+ 	    tasks: test
